--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="css/flickity.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     </head>
-<!-- check if there is more things to add   -->
+
     <body>
 <!-- header part, flexbox   -->
         <header class="header container">
@@ -218,9 +218,9 @@
         </footer>
 <!--   !!!!!!!!  check it again!!!!!!   -->
 
-        <script src="jquery-3.1.1.js"></script>
-        <script src="tota11y.js"></script>
-        <script src="flickity.pkgd.js"></script>
-        <script src="js.js"></script>
+        <script src="js/jquery-3.1.1.js"></script>
+        <script src="js/tota11y.js"></script>
+        <script src="js/flickity.pkgd.js"></script>
+        <script src="js/js.js"></script>
     </body>
 </html>
