--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
                 </div>
             </div>
         </footer>
-<!--   !!!!!!!!  check it again!!!!!!   -->
 
+<!--   loading js files here -->
         <script src="js/jquery-3.1.1.js"></script>
         <script src="js/tota11y.js"></script>
         <script src="js/flickity.pkgd.js"></script>
