--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <!-- header part, flexbox   -->
         <header class="header container">
             <div class="logo">
-                <img src="images/aloha-logo.svg" alt="Logo">
+                <img src="assets/images/aloha-logo.svg" alt="Logo">
             </div>
             <div class="cart"> 
-                <img src="images/cart-icon.svg" alt="Cart">
+                <img src="assets/images/cart-icon.svg" alt="Cart">
             </div>
             <nav class="navigation">
                 <ul>
