fix banner text and add container

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
 <!-- banner part!!!!  -->
         <section class="banner">
-            <div class="banner-text">
-                <p class="newcollection">NEW COLLECTION</p>
+            <div class="banner-text container">
+                <p class="newcollection">new collection</p>
                 <p class="spring">Spring/Summer 2016</p>
             </div>
         </section>
