fix h2 and span

--- a/index.html
+++ b/index.html
@@ -47,15 +47,14 @@
         </section>
 
 <!--  about part. text only -->
-        <section class="container styles">
+        <section class="styles">
             <div class="styles-text">
-                <h2 class="HCS"><em>Hand-Craft </em><span>Styles</span></h2>
+                <h2 class="HCS">Hand-Craft <span>Styles</span></h2>
                 <p>Aloha Apparel Co. sells only the finest ready-to-travel clothing. Browse our current selection of products or sign-up for updates below.</p>
             </div>
         </section>
 
 <!--   products!!!!     !!!!-->
-
         <section class="products">
             <div class="p-category">
                 <div class="category1 mens">
@@ -97,7 +96,7 @@
 <!--  featured part  most important part!!!! -->
         <section class="featured">
             <div class="container">
-                <h2 class="featured-title"><em>Most-Loved </em>Products</h2>
+                <h2 class="featured-title">Most-Loved <span>Products</span></h2>
                 <div class="gallery js-flickity">
                     <div class="gallery-cell">
                         <img src="images/stretch-knit-dress.jpg" alt="Strech-dress">
@@ -161,7 +160,7 @@
 <!--  updates    ****************-->
         <section class="updates">
             <div class="sign-up container">
-                <h2><em>Sign-up for </em>Updates</h2>
+                <h2>Sign-up for <span>Updates</span></h2>
                 <p>Stay updated on our latest product releases, be first to find out about upcoming sales, and get free style tips from our blog. Unsubscribe at any time.</p>
                 <form action="submit.php" method="get" class="sign-up-email">
                     <input type="email" name="email" value="Your Email">
