add container to styles section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <!--  about part. text only -->
         <section class="styles">
-            <div class="styles-text">
+            <div class="styles-text container">
                 <h2 class="HCS">Hand-Craft <span>Styles</span></h2>
                 <p>Aloha Apparel Co. sells only the finest ready-to-travel clothing. Browse our current selection of products or sign-up for updates below.</p>
             </div>
