--- a/index.html
+++ b/index.html
@@ -173,11 +173,13 @@
         <footer class="contact">
             <div class="flex-container">
                 <div class="detail">
-                    <p>© 2016 Aloha Apparels Co.</p>
-                    <p>Powered by HTML and CSS</p>
-                    <br>
-                    <p>604-604-6040. <a href="mailto:info@alohaapparel.com"> Info@alohaapparel.com</a></p>
-                    <br>
+                    <div class="copyright">
+                        <p>&copy 2016 Aloha Apparel Co.</p>
+                        <p>Powered by HTML and CSS.</p>
+                    </div>
+                    <div class="tel">
+                        <p>604-604-6040. <a href="mailto:info@alohaapparel.com"> Info@alohaapparel.com</a></p>
+                    </div>
                     <div class="address">
                         <p>1490 W Broadway</p>
                         <p>Vancouver, BC, Canada</p>
@@ -186,31 +188,25 @@
                 <div>
                     <ul class="links">
                         <li><a href="https://www.facebook.com">
-                                <i class="fa fa-facebook" aria-hidden="true">
-                                
-                                </i>
-                                <span>Facebook</span>
-                            </a></li>
+                                <i class="fa fa-facebook" aria-hidden="true"></i><span>Facebook</span>
+                            </a>
+                        </li>
                         <li><a href="https://www.twitter.com">
-                                <i class="fa fa-twitter">
-
-                                </i>
-                                <span>Twitter</span>
-                            </a></li>
+                                <i class="fa fa-twitter" aria-hidden="true"></i><span>Twitter</span>
+                            </a>
+                        </li>
                         <li><a href="https://www.instagram.com">
-                                <i class="fa fa-instagram"></i>
-                            Instagram
-                            </a></li>
+                                <i class="fa fa-instagram" aria-hidden="true"></i><span>Instagram</span>
+                            </a>
+                        </li>
                         <li><a href="https://www.pinterest.com">
-                                <i class="fa fa-pinterest">
-                                </i>
-                                Pinterest
-                            </a></li>
+                                <i class="fa fa-pinterest" aria-hidden="true"></i><span>Pinterest</span>
+                            </a>
+                        </li>
                         <li><a href="https://plus.google.com">
-                                <i class="fa fa-google-plus">
-                                </i>
-                                Google+
-                            </a></li>
+                                <i class="fa fa-google-plus" aria-hidden="true"></i><span>Google+</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
