--- a/index.html
+++ b/index.html
@@ -157,13 +157,13 @@
             </div>
         </section>
 
-<!--  updates    ****************-->
+<!--  updates    !!!!!!!!!!!!!!!!!!-->
         <section class="updates">
             <div class="sign-up container">
                 <h2>Sign-up for <span>Updates</span></h2>
                 <p>Stay updated on our latest product releases, be first to find out about upcoming sales, and get free style tips from our blog. Unsubscribe at any time.</p>
                 <form action="submit.php" method="get" class="sign-up-email">
-                    <input type="email" name="email" value="Your Email">
+                    <input type="email" name="email" value placeholder="Your Email">
                     <input type="submit" name="subscribe" value="Subscribe">
                 </form>
             </div>
