--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
 <!--  footer part!!! -->
         <footer class="contact">
-            <div class="flex-container">
+            <div class="container">
                 <div class="detail">
                     <div class="copyright">
                         <p>&copy 2016 Aloha Apparel Co.</p>
@@ -213,9 +213,9 @@
         </footer>
 
 <!--   loading js files here -->
-        <script src="js/jquery-3.1.1.js"></script>
-        <script src="js/tota11y.js"></script>
-        <script src="js/flickity.pkgd.js"></script>
-        <script src="js/js.js"></script>
+        <script src="../js/jquery-3.1.1.js"></script>
+        <script src="../js/tota11y.js"></script>
+        <script src="../js/flickity.pkgd.js"></script>
+        <script src="../js/js.js"></script>
     </body>
 </html>
