--- a/index.html
+++ b/index.html
@@ -90,65 +90,62 @@
             </div>
         </section>
 
-
-
-
 <!--  featured part  most important part!!!! -->
         <section class="featured">
             <div class="container">
                 <h2 class="featured-title">Most-Loved <span>Products</span></h2>
                 <div class="gallery js-flickity">
                     <div class="gallery-cell">
-                        <img src="images/stretch-knit-dress.jpg" alt="Strech-dress">
+                        <img src="assets/images/stretch-knit-dress.jpg" alt="Strech-dress">
                         <p class="cloth-type">dresses</p>
                         <h3>Stretch Knit Dress</h3>
                         <p class="price">$169.00</p>
                     </div>
 
                     <div class="gallery-cell">
-                        <img src="images/cotton-blue-shirt.jpg" alt="Shirt">
+                        <img src="assets/images/cotton-blue-shirt.jpg" alt="Shirt">
                         <p class="cloth-type">shirts</p>
                         <h3>Cotton Blue Shirt</h3>
                         <p class="price">$89.00</p>
                     </div>
 
                     <div class="gallery-cell">
-                        <img src="images/checked-stretch-dress.jpg" alt="Checked-dress">
+                        <img src="assets/images/checked-stretch-dress.jpg" alt="Checked-dress">
                         <p class="cloth-type">dress</p>
                         <h3>Checked Stretch Dress</h3>
                         <p class="price">$129.00</p>
                     </div>
 
                     <div class="gallery-cell">
-                        <img src="images/blue-hipster-backpack.jpg" alt="Backpack">
+                        <img src="assets/images/blue-hipster-backpack.jpg" alt="Backpack">
                         <p class="cloth-type">bags</p>
                         <h3>Blue Hipster Backpack</h3>
                         <p class="price">$69.00</p>
                     </div>
 
                     <div class="gallery-cell">
-                        <img src="images/demin-overall-shorts.jpg" alt="shorts">
+                        <img src="assets/images/demin-overall-shorts.jpg" alt="shorts">
                         <p class="cloth-type">demin</p>
                         <h3>Demin Overall Shorts</h3>
                         <p class="price">$89.00</p>
                     </div>
 
                     <div class="gallery-cell">
-                        <img src="images/pink-dotted-dress.jpg" alt="dotted-dress">
+                        <img src="assets/images/pink-dotted-dress.jpg" alt="dotted-dress">
                         <p class="cloth-type">dress</p>
                         <h3>Pink Dotted Dress</h3>
                         <p class="price">$99.00</p>
                     </div>
 
                     <div class="gallery-cell">
-                        <img src="images/blue-silk-dress.jpg" alt="silk-dress">
+                        <img src="assets/images/blue-silk-dress.jpg" alt="silk-dress">
                         <p class="cloth-type">dress</p>
                         <h3>Blue Silk Dress</h3>
                         <p class="price">$119.00</p>
                     </div>
                             
                     <div class="gallery-cell">
-                        <img src="images/cotton-yellow-tshirt.jpg" alt="yellow-tshirt">
+                        <img src="assets/images/cotton-yellow-tshirt.jpg" alt="yellow-tshirt">
                         <p class="cloth-type">shirts</p>
                         <h3>Cotton Yellow Tshirt</h3>
                         <p class="price">$39.00</p>
