fix url for scripts

--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@
         </footer>
 
 <!--   loading js files here -->
-        <script src="../js/jquery-3.1.1.js"></script>
-        <script src="../js/tota11y.js"></script>
-        <script src="../js/flickity.pkgd.js"></script>
-        <script src="../js/js.js"></script>
+        <script src="js/jquery-3.1.1.js"></script>
+        <script src="js/tota11y.js"></script>
+        <script src="js/flickity.pkgd.js"></script>
+        <script src="js/js.js"></script>
     </body>
 </html>
