--- a/index.html
+++ b/index.html
@@ -182,30 +182,23 @@
                         <p>Vancouver, BC, Canada</p>
                     </div>
                 </div>                
-                <div>
-                    <ul class="links">
-                        <li><a href="https://www.facebook.com">
-                                <i class="fa fa-facebook" aria-hidden="true"></i><span>Facebook</span>
-                            </a>
-                        </li>
-                        <li><a href="https://www.twitter.com">
-                                <i class="fa fa-twitter" aria-hidden="true"></i><span>Twitter</span>
-                            </a>
-                        </li>
-                        <li><a href="https://www.instagram.com">
-                                <i class="fa fa-instagram" aria-hidden="true"></i><span>Instagram</span>
-                            </a>
-                        </li>
-                        <li><a href="https://www.pinterest.com">
-                                <i class="fa fa-pinterest" aria-hidden="true"></i><span>Pinterest</span>
-                            </a>
-                        </li>
-                        <li><a href="https://plus.google.com">
-                                <i class="fa fa-google-plus" aria-hidden="true"></i><span>Google+</span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+                <ul class="links">
+                    <li><a href="https://www.facebook.com">
+                        <i class="fa fa-facebook" aria-hidden="true"></i><span>Facebook</span></a>
+                    </li>
+                    <li><a href="https://www.twitter.com">
+                        <i class="fa fa-twitter" aria-hidden="true"></i><span>Twitter</span></a>
+                    </li>
+                    <li><a href="https://www.instagram.com">
+                        <i class="fa fa-instagram" aria-hidden="true"></i><span>Instagram</span></a>
+                    </li>
+                    <li><a href="https://www.pinterest.com">
+                        <i class="fa fa-pinterest" aria-hidden="true"></i><span>Pinterest</span></a>
+                    </li>
+                    <li><a href="https://plus.google.com">
+                        <i class="fa fa-google-plus" aria-hidden="true"></i><span>Google+</span></a>
+                    </li>
+                </ul>
             </div>
         </footer>
 
