--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <nav class="navigation">
                 <ul>
                     <li>
-                        <a href="#'.style'">about</a>
+                        <a href="#style">about</a>
                     </li>
                     <li>
                         <a href="#shop">shop</a>
@@ -47,7 +47,7 @@
         </section>
 
 <!--  about part. text only -->
-        <section class="styles">
+        <section class="styles" id="style">
             <div class="styles-text container">
                 <h2 class="HCS">Hand-Craft <span>Styles</span></h2>
                 <p>Aloha Apparel Co. sells only the finest ready-to-travel clothing. Browse our current selection of products or sign-up for updates below.</p>
@@ -55,7 +55,7 @@
         </section>
 
 <!--   products!!!!     !!!!-->
-        <section class="products">
+        <section class="products" id="shop">
             <div class="p-category">
                 <div class="category1 mens">
                     <div class="c-text">
@@ -91,7 +91,7 @@
         </section>
 
 <!--  featured part  most important part!!!! -->
-        <section class="featured">
+        <section class="featured" id="featured">
             <div class="container">
                 <h2 class="featured-title">Most-Loved <span>Products</span></h2>
                 <div class="gallery js-flickity">
@@ -155,7 +155,7 @@
         </section>
 
 <!--  updates    !!!!!!!!!!!!!!!!!!-->
-        <section class="updates">
+        <section class="updates" id="updates">
             <div class="sign-up container">
                 <h2>Sign-up for <span>Updates</span></h2>
                 <p>Stay updated on our latest product releases, be first to find out about upcoming sales, and get free style tips from our blog. Unsubscribe at any time.</p>
