--- a/index.html
+++ b/index.html
@@ -206,6 +206,6 @@
         <script src="js/jquery-3.1.1.js"></script>
         <script src="js/tota11y.js"></script>
         <script src="js/flickity.pkgd.js"></script>
-        <script src="js/js.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
